--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p><i class="fa-solid fa-arrow-left"></i></p>
             </div>
 <div class="text">
-    <p>Settings</p>
+    <p>Yoki Settings</p>
 </div>
 
         </div>
